spacing fix for bag image pop up

--- a/public/css/bagsintrees.css
+++ b/public/css/bagsintrees.css
@@ -134,7 +134,7 @@ h4 {
     background-color:rgba(255, 255, 255, 0.7);
     display: none;
     z-index: 999999;
-    margin: 10px 10px 0px 0px;
+    margin: 10px 1px 0px 0px;
     border-radius: 5px;
     box-shadow: 5px 5px 4px #888888;
 }
