--- a/public/css/media-big.css
+++ b/public/css/media-big.css
@@ -91,5 +91,8 @@
     #mobile-pin-img {
         display: none;
     }
+    .map-detail {
+        margin: 20px 5px 0px 0px;
+    }
 
 }
